[package]
name = "todo"
version = "0.1.0"
authors = ["Nathan Stocks <nathan@agileperception.com>"]
description = "todo: Description"
edition = "2018"
homepage = "https://github.com/CleanCut/todo"
repository = "https://github.com/CleanCut/todo"
readme = "README.md"
# todo: choose appropriate keywords and categories
#keywords = ["game", "engine", "graphics", "audio", "rusty"]
#categories = ["game-engines"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
# todo: replace both instances of "todo" in the first pattern with the package name you chose
pre-release-replacements = [
    { file = "README.md", search = "todo = \"[0-9.]+\"", replace = "todo = \"{{version}}\"" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/cleancut/rusty_audio/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[dependencies]
