[package]
name = "extreme_drivers_ed"
version = "0.1.0"
description = "Can you survive your driving exam?"
edition = "2018"
homepage = "https://github.com/CleanCut/extreme_drivers_ed"
repository = "https://github.com/CleanCut/extreme_drivers_ed"
readme = "README.md"
keywords = [ "game", "car", "graphics", "audio", "rusty" ]
categories = [ "games" ]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "extreme_drivers_ed = \"[0-9.]+\"", replace = "extreme_drivers_ed = \"{{version}}\"" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/cleancut/extreme_drivers_ed/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[dependencies]
